--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
 
 dependencies {
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation files('com.')
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.3'
+    implementation 'androidx.navigation:navigation-ui:2.3.3'
     def room_version = "2.2.6"
 
     implementation "androidx.room:room-runtime:$room_version"
